--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -9,13 +9,14 @@
     border-bottom: 1px solid #d9d9d9;
     background: #fff;
     width: 100%;
+    overflow: auto; /*Float takes everything out of page rotation*/
 }
 
 .cb-nav
 {
     width: 100%;
     margin: 0 auto;
-    height: 71px;
+    display: block;
 }
 
 .ap-title-container
@@ -61,8 +62,8 @@
     display: inline-block;
     line-height: 2em;
     font-size: .875rem;
-    font-size: 14px;
 }
+
 /*Add a span above image and then pad it*/
 .nav-link-img
 {
