Content.css and more stuff lmao

--- a/assets/css/banner.css
+++ b/assets/css/banner.css
@@ -2,6 +2,7 @@
 :root
 {
     --college-board-black: #221f1f;
+    --college-board-text-black: #505050;
     --college-board-blue: #009cde;
     --college-board-grey: #c1c1c1;
     --cb-font-family: Roboto,sans-serif;
