Added course anchor

--- a/assets/css/banner.css
+++ b/assets/css/banner.css
@@ -3,6 +3,7 @@
 {
     --college-board-black: #221f1f;
     --college-board-text-black: #505050;
+    --college-board-default-black: #1e1e1e;
     --college-board-blue: #009cde;
     --college-board-grey: #c1c1c1;
     --cb-font-family: Roboto,sans-serif;
