--- a/assets/css/content.css
+++ b/assets/css/content.css
@@ -71,3 +71,46 @@
     font-family: "Roboto",sans-serif;
     background-color: transparent;
 }
+
+#course-anchor
+{
+    border-bottom: 1px solid #d9d9d9;
+}
+
+#course-anchor ul
+{
+    margin: 0px;
+    padding: 0px;
+    list-style-type: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+}
+
+#course-anchor ul li
+{
+    list-style-type: none;
+    margin-right: 48px;
+}
+
+.course-link
+{
+    outline: 0px;
+    color: var(--college-board-default-black);
+    border-bottom: 2px solid white;
+    text-decoration: none;
+    display: block;
+    font-size: .875em;
+    line-height: 1.7em;
+    padding-bottom: 10px;
+    cursor: pointer;
+    
+    transition-property: border-bottom;
+    transition-duration: 0.25s;
+    transition-timing-function: ease-in-out;
+}
+
+.course-link:hover
+{
+    border-bottom: 2px solid var(--college-board-black);
+}
