--- a/assets/css/content.css
+++ b/assets/css/content.css
@@ -12,14 +12,14 @@
 
 .main-dp
 {
-    margin-left: 14%;
-    margin-right: 14%;
+    margin-left: 12%;
+    margin-right: 12%;
     padding-left: 15%;
     padding-right: 15%;
-    width: 42%;
+    width: 46%;
 }
 
-@media (max-width: 1450px)
+@media (max-width: 1500px)
 {
     .main-dp
     {
@@ -72,12 +72,12 @@
     background-color: transparent;
 }
 
-#course-anchor
+#courseAnchor
 {
     border-bottom: 1px solid #d9d9d9;
 }
 
-#course-anchor ul
+#courseAnchor ul
 {
     margin: 0px;
     padding: 0px;
@@ -87,7 +87,7 @@
     justify-content: flex-start;
 }
 
-#course-anchor ul li
+#courseAnchor ul li
 {
     list-style-type: none;
     margin-right: 48px;
@@ -114,3 +114,86 @@
 {
     border-bottom: 2px solid var(--college-board-black);
 }
+
+#aboutCourse
+{
+    font-family: var(--cb-font-family);
+    color: var(--college-board-text-black)
+}
+
+.title-header
+{
+    line-height: 24px;
+    padding-bottom: 12px;
+    border-bottom: 4px solid var(--college-board-text-black);
+    margin-bottom: 20px;
+}
+
+.text, .checkbox-list span
+{
+    margin-bottom: 24px;
+    font-family: var(--cb-font-family);
+    font-size: 1rem;
+    line-height: 1.5em;
+    -webkit-font-smoothing: antialiased;
+}
+
+.h3-header
+{
+    font: 1.1875rem "Roboto Slab Bold",sans-serif;
+    line-height: 1.25em;
+    margin: 0px;
+}
+
+.checkbox-list
+{
+    list-style-type: none;
+    box-sizing: border-box;
+
+    display: grid;
+    grid-column: 1 / span 2;
+    grid-auto-rows: auto;
+    grid-template-columns: 1fr 1fr;
+
+    padding: 0px;
+    margin: 0px;
+    flex-wrap: wrap;
+}
+
+.checkbox-list li
+{
+    box-sizing: border-box;
+    padding: 24px 24px 24px 24px;
+    
+    display: flex;
+    flex-direction: row;
+}
+
+.checkbox-list li p
+{
+    font-size: 1rem;
+    line-height: 1.5em;
+    margin: 0px;
+}
+
+.checkbox-list li img
+{
+    width: 1rem;
+    padding-right: 8px; /*Width should add up to 24px*/
+    padding-top: 3px;
+    height: 1rem;
+    -webkit-user-drag: none;
+}
+/*.checkbox-list li::before
+{
+    position: absolute;
+    display: block;
+    top: 27px;
+    left: 24px;
+    width: 1rem;
+    height: 1rem;
+    font: 400 1rem var(--cb-font-family);
+    color: var(--college-board-text-black);
+    
+    content: "\e90b";
+}*/
