Added exam times

--- a/assets/css/content.css
+++ b/assets/css/content.css
@@ -212,9 +212,125 @@
     margin: 0px;
 }
 
+.sbs-flex
+{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+}
+
 .eq-flex
 {
     flex-direction: column !important;
     padding-left: 0px !important;
     padding-right: 0px !important;
+}
+
+.exam-div
+{
+    display: flex;
+    justify-content: left;
+    flex-wrap: wrap;
+    margin-bottom: 24px;
+    width: calc(100% + 30px);
+    transform: translateX(-15px);
+}
+
+.exam-date
+{
+    width: calc(40% - 30px);
+    margin: 24px 15px 24px 15px;
+    border: 1px solid var(--college-board-light-grey);
+    line-height: 2em;
+    min-height: 56px;
+}
+
+.date-div
+{
+    padding: 23px 23px 0 23px;
+}
+
+.date-div img
+{
+    height: 2em;
+    width: 2em;
+    display: block;
+}
+
+.date-div p, .name-div p
+{
+    line-height: 1.5em;
+    font-weight: 200;
+    font-family: var(--cb-font-family);
+    margin: 0px;
+    margin-left: 10px;
+}
+
+.name-div
+{
+    padding: 20px 24px 24px 24px;
+}
+
+.name-div p
+{
+    margin-left: 0px;
+}
+
+.options-div
+{
+    padding: 0px 5px 24px 24px;
+    font-size: .875rem;
+    line-height: 1.7em;
+
+    align-items: center;
+}
+
+.options-div > div > a
+{
+    color: var(--college-board-text-black);
+    text-decoration: none;
+    cursor: pointer;
+
+    line-height: 1.7em;
+    font: .875rem var(--cb-font-family);
+}
+
+.b1
+{
+    margin-right: 12px;
+}
+
+.b2
+{
+    padding-left: 12px;
+    border-left: 1px solid var(--college-board-text-black);
+}
+
+.options-div a:hover
+{
+    text-decoration: underline var(--college-board-text-black);
+}
+
+.options-img1, .options-img2
+{
+    width: 1em;
+    height: 1em;
+    padding-right: 10px;
+}
+
+.options-img2
+{
+    padding-right: 0px;
+    padding-left: 8px;
+    padding-top: 2px;
+}
+
+.unit-explanation
+{
+
+}
+
+.grey-bg
+{
+    background-color: #f0f0f0;;
 }
