--- a/assets/css/banner.css
+++ b/assets/css/banner.css
@@ -5,6 +5,7 @@
     --college-board-text-black: #505050;
     --college-board-default-black: #1e1e1e;
     --college-board-blue: #009cde;
+    --college-board-dark-blue: #0077c8;
     --college-board-grey: #c1c1c1;
     --college-board-light-grey: #d9d9d9;
     --cb-font-family: "Roboto",sans-serif;
@@ -19,7 +20,7 @@
 
 body
 {
-    margin: 0;
+    margin: 0px;
     font-family: var(--cb-font-family);
     text-size-adjust: 100%;
 }
