--- a/assets/css/content.css
+++ b/assets/css/content.css
@@ -66,7 +66,7 @@
 
 .link /*Use for all generic links*/
 {
-    color: #0077c8;
+    color: var(--college-board-dark-blue);
     text-decoration: none;
     font-family: "Roboto",sans-serif;
     background-color: transparent;
@@ -123,9 +123,12 @@
 
 .title-header
 {
+    display: block;
     line-height: 24px;
     padding-bottom: 12px;
     border-bottom: 4px solid var(--college-board-text-black);
+    font-family: "Roboto Slab Bold", sans-serif;
+    font-weight: normal;
     margin-bottom: 20px;
 }
 
@@ -325,12 +328,86 @@
     padding-top: 2px;
 }
 
-.unit-explanation
-{
-
-}
-
 .grey-bg
 {
     background-color: #f0f0f0;;
+}
+
+#about-title p
+{
+    font-family: var(--cb-font-family);
+    color: var(--college-board-text-black);
+    font-size: 1rem;
+    line-height: 1.5em;
+}
+
+.ecompress
+{
+    float: right;
+    text-decoration: none;
+}
+
+.eb
+{
+    font: 1rem var(--cb-font-family);
+    color: var(--college-board-dark-blue);
+    text-decoration: none;
+}
+
+.unit-container
+{
+    margin-bottom: 1.5em;
+}
+
+.unit
+{
+    border: 0px;
+    margin-bottom: 0px;
+    border-radius: 0px;
+    color: var(--college-board-text-black);
+    font: 0.875rem, var(--cb-font-family);
+    line-height: 1.28em;
+    background-color: white;
+}
+
+.unit-header
+{
+    margin-bottom: 0px;
+}
+
+.unit-visible
+{
+    min-height: auto;
+    font-size: 1rem;
+}
+
+.unit-title
+{
+    font-family: "Roboto Slab Bold", sans-serif;
+    font-size: 1rem;
+    line-height: 1.25em;
+    padding: 22px 0px 22px 16px;
+    margin: 0px;
+}
+
+.ecompress-btn
+{
+    float: right;
+    color: var(--college-board-dark-blue);
+    font-family: var(--cb-font-family);
+    font-weight: 100;
+    font-size: 24px;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    padding: 0px 24px 0px 24px;
+}
+
+.unit-text
+{
+    margin-bottom: 24px;
+    margin-top: -24px;
+    width: calc(100% - 64px);
+    padding: 0px 16px;
+    font-size: .875rem;
+    line-height: 1.7em;
 }
